# cicd-for-data-scientists

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  schemas.py
model/: churn_model.pkl  train_model.py
tests/: test_api.py
